BLD: Trying to achieve java 11 retrocompatibility.